--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body class="root">
     <div class="page">
 
-      <header class="header">
+      <header class="header page__header">
+        <a class="header__logo" href="./index.html">
+          <img src="./images/header/__logo/header__logo.svg" alt="Логотип Mesto Russia">
+        </a>
       </header>
 
       <main class="content">
