--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="page">
 
       <header class="header page__header">
-        <a class="header__logo" href="./index.html">
-          <img src="./images/header/__logo/header__logo.svg" alt="Логотип Mesto Russia">
+        <a class="header__link" href="./index.html">
+          <img class="header__logo" src="./images/header/__logo/header__logo.svg" alt="Логотип Mesto Russia">
         </a>
       </header>
 
