сверстать блок profile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
       </header>
 
       <main class="content">
+        <section class="profile page__profile">
+          <div class="profile__container">
+            <img class="profile__avatar" src="./images/profile/__avatar/profile__avatar.jpg" alt="">
+            <div class="profile__info">
+              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <div class="profile__button profile__button_action_edit"></div>
+              <p class="profile__job">Исследователь океана</p>
+            </div>
+          </div>
+            <div class="profile__button profile__button_action_add"></div>
+        </section>
       </main>
 
       <footer class="footer">
