сверстать блок footer

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="footer page__footer">
+        <p class="footer__copyright">© 2020 Морев Денис</p>
       </footer>
 
     </div>
