написать скрипт для формы модального окна

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
         <p class="footer__copyright">© 2020 Морев Денис</p>
       </footer>
 
-      <div class="popup popup_opened page__popup">
-        <div class="popup__container">
+      <div class="popup page__popup">
+        <form class="popup__container">
           <div class="button button_action_close"></div>
           <p class="popup__heading">Редактировать профиль</p>
           <input class="popup__input popup__input_field_name" type="text" placeholder="Имя">
-          <input class="popup__input popup__input_field_job" type="text" placeholder="Профессия">
-          <button class="popup__button">Сохранить</button>
-        </div>
+          <input class="popup__input popup__input_field_job" type="text" placeholder="О себе">
+          <button class="popup__button" type="submit">Сохранить</button>
+        </form>
       </div>
 
     </div>
