исправить ошибки по автотесту

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="page">
 
       <header class="header page__header">
-        <a class="header__link" href="./index.html">
+        <a class="header__link" href="./index.html" target="_self">
           <img class="header__logo" src="./images/header/__logo/header__logo.svg" alt="Логотип Mesto Russia">
         </a>
       </header>
 
       <main class="content">
         <section class="profile page__profile">
-          <img class="profile__avatar" src="./images/profile/__avatar/profile__avatar.jpg" alt="">
+          <img class="profile__avatar" src="./images/profile/__avatar/profile__avatar.jpg" alt="Аватар">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <div class="button button_action_edit"></div>
           <p class="profile__job">Исследователь океана</p>
@@ -87,10 +87,10 @@
       <footer class="footer page__footer">
         <p class="footer__copyright">© 2020 Морев Денис</p>
       </footer>
-      
+
     </div>
-    
-    <div class="popup page__popup">
+
+    <div class="popup">
       <form class="popup__container">
         <div class="button button_action_close"></div>
         <p class="popup__heading">Редактировать профиль</p>
