добавить аттрибут name для форм и полей ввода

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
     </div>
 
     <div class="popup">
-      <form class="popup__container">
+      <form class="popup__container" name="form-popup">
         <div class="button button_action_close"></div>
         <p class="popup__heading">Редактировать профиль</p>
-        <input class="popup__input popup__input_field_name" type="text" placeholder="Имя">
-        <input class="popup__input popup__input_field_job" type="text" placeholder="О себе">
+        <input class="popup__input popup__input_field_name" type="text" placeholder="Имя" name="input-name-popup">
+        <input class="popup__input popup__input_field_job" type="text" placeholder="О себе" name="input-jop-popup">
         <button class="popup__button" type="submit">Сохранить</button>
       </form>
     </div>
