--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="popup">
       <form class="popup__container" name="form-popup">
         <button class="popup__button popup__button_action_close button" type="button"></button>
-        <p class="popup__heading">Редактировать профиль</p>
+        <h2 class="popup__heading">Редактировать профиль</h2>
         <input class="popup__input popup__input_field_name" type="text" placeholder="Имя" name="input-name-popup">
         <input class="popup__input popup__input_field_job" type="text" placeholder="О себе" name="input-jop-popup">
         <button class="popup__button popup__button_action_submit" type="submit">Сохранить</button>
