--- a/index.html
+++ b/index.html
@@ -41,8 +41,18 @@
         <button class="popup__button popup__button_action_close button" type="button"></button>
         <h2 class="popup__heading">Редактировать профиль</h2>
         <input class="popup__input popup__input_field_name" type="text" placeholder="Имя" name="input-name-popup">
-        <input class="popup__input popup__input_field_job" type="text" placeholder="О себе" name="input-jop-popup">
+        <input class="popup__input popup__input_field_job" type="text" placeholder="О себе" name="input-job-popup">
         <button class="popup__button popup__button_action_submit" type="submit">Сохранить</button>
+      </form>
+    </div>
+
+    <div class="popup-add-card">
+      <form class="popup-add-card__container" name="form-popup-add-card">
+        <button class="popup-add-card__button popup-add-card__button_action_close button" type="button"></button>
+        <h2 class="popup-add-card__heading">Новое место</h2>
+        <input class="popup-add-card__input popup-add-card__input_field_name" type="text" placeholder="Название" name="input-name-popup-add-card">
+        <input class="popup-add-card__input popup-add-card__input_field_link" type="text" placeholder="Ссылка на картинку" name="input-link-popup-add-card">
+        <button class="popup-add-card__button popup-add-card__button_action_submit" type="submit">Сохранить</button>
       </form>
     </div>
 
