добавить возможность лайкать карточки, удалять карточки, открывать попап с картинкой

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
       </form>
     </div>
 
+    <div class="popup-image">
+      <div class="popup-image__container">
+        <img class="popup-image__img" src="#" alt="">
+        <button class="popup-image__button popup-image__button_action_close button" type="button"></button>
+        <h2 class="popup-image__heading"></h2>
+      </div>
+    </div>
+
     <template id="element">
       <li class="element">
         <figure class="element__figure">
@@ -65,6 +73,7 @@
             <div class="element__like"></div>
           </figcaption>
         </figure>
+        <button class="element__button" type="button"></button>
       </li>
     </template>
 
