--- a/index.html
+++ b/index.html
@@ -36,38 +36,38 @@
 
     </div>
 
-    <div class="popup">
-      <form class="popup__container" name="form-popup">
-        <button class="popup__button popup__button_action_close button" type="button"></button>
-        <h2 class="popup__heading">Редактировать профиль</h2>
+    <div class="popup popup_feat_profile-edit">
+      <form class="popup__container popup__container_entity_form" name="form-popup">
+        <button class="popup__button popup__button_action_close popup__button_position_form button" type="button"></button>
+        <h2 class="popup__heading popup__heading_entity_form">Редактировать профиль</h2>
         <input class="popup__input popup__input_field_name" type="text" placeholder="Имя" name="input-name-popup">
         <input class="popup__input popup__input_field_job" type="text" placeholder="О себе" name="input-job-popup">
         <button class="popup__button popup__button_action_submit" type="submit">Сохранить</button>
       </form>
     </div>
 
-    <div class="popup-add-card">
-      <form class="popup-add-card__container" name="form-popup-add-card">
-        <button class="popup-add-card__button popup-add-card__button_action_close button" type="button"></button>
-        <h2 class="popup-add-card__heading">Новое место</h2>
-        <input class="popup-add-card__input popup-add-card__input_field_name" type="text" placeholder="Название" name="input-name-popup-add-card">
-        <input class="popup-add-card__input popup-add-card__input_field_link" type="text" placeholder="Ссылка на картинку" name="input-link-popup-add-card">
-        <button class="popup-add-card__button popup-add-card__button_action_submit" type="submit">Сохранить</button>
+    <div class="popup popup_feat_card-add">
+      <form class="popup__container popup__container_entity_form" name="form-popup-add-card">
+        <button class="popup__button popup__button_action_close popup__button_position_form button" type="button"></button>
+        <h2 class="popup__heading popup__heading_entity_form">Новое место</h2>
+        <input class="popup__input popup__input_field_name" type="text" placeholder="Название" name="input-name-popup-add-card">
+        <input class="popup__input popup__input_field_link" type="text" placeholder="Ссылка на картинку" name="input-link-popup-add-card">
+        <button class="popup__button popup__button_action_submit" type="submit">Создать</button>
       </form>
     </div>
 
-    <div class="popup-image">
-      <div class="popup-image__container">
-        <img class="popup-image__img" src="#" alt="">
-        <button class="popup-image__button popup-image__button_action_close button" type="button"></button>
-        <h2 class="popup-image__heading"></h2>
+    <div class="popup popup_feat_image-fullsize">
+      <div class="popup__container popup__container_entity_image">
+        <img class="popup__image" src="#" alt="">
+        <button class="popup__button popup__button_action_close popup__button_position_image button" type="button"></button>
+        <h2 class="popup__heading popup__heading_entity_image"></h2>
       </div>
     </div>
 
     <template id="element">
       <li class="element">
         <figure class="element__figure">
-          <img class="element__img" src="" alt="">
+          <img class="element__image" src="" alt="">
           <figcaption class="element__caption">
             <h2 class="element__heading"></h2>
             <div class="element__like"></div>
