исправить замечания автотеста

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <template id="element">
       <li class="element">
         <figure class="element__figure">
-          <img class="element__image" src="" alt="">
+          <img class="element__image" src="#" alt="">
           <figcaption class="element__caption">
             <h2 class="element__heading"></h2>
             <div class="element__like"></div>
