--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Попап с полноразмерной картинкой -->
     <div class="popup popup_feat_image-fullsize">
       <div class="popup__container popup__container_feat_image-fullsize">
-        <img class="popup__image-fullsize" src="#" alt=" ">
+        <img class="popup__image-fullsize" src="#" alt="Alt">
         <button class="popup__button popup__button_action_close popup__button_position_image-fullsize-close" type="button"></button>
         <h2 class="popup__heading popup__heading_feat_image-fullsize">Название</h2>
       </div>
@@ -71,7 +71,7 @@
     <template id="element">
       <li class="element">
         <figure class="element__figure">
-          <img class="element__image" src="#" alt=" ">
+          <img class="element__image" src="#" alt="Alt">
           <figcaption class="element__caption">
             <h2 class="element__heading"></h2>
             <div class="element__like"></div>
