--- a/index.html
+++ b/index.html
@@ -38,22 +38,34 @@
 
     <!-- Попап с редактированием профиля -->
     <div class="popup popup_feat_profile-edit">
-      <form class="popup__container popup__container_feat_profile-edit" name="form-popup">
+      <form class="popup__container popup__container_form popup__container_feat_profile-edit" name="form-profile-edit" novalidate>
         <button class="popup__button popup__button_action_close popup__button_position_profile-edit-close" type="button"></button>
         <h2 class="popup__heading popup__heading_feat_profile-edit">Редактировать профиль</h2>
-        <input class="popup__input popup__input_field_name" type="text" placeholder="Имя" name="input-name-popup" required>
-        <input class="popup__input popup__input_field_job" type="text" placeholder="О себе" name="input-job-popup" required>
+        <label class="popup__field">
+          <input id="profile-edit-input-name" class="popup__input popup__input_field_name" type="text" placeholder="Имя" name="profile-edit-input-name" required minlength="2" maxlength="40">
+          <span class="profile-edit-input-name-error popup__input-error"></span>
+        </label>
+        <label class="popup__field">
+          <input id="profile-edit-input-job" class="popup__input popup__input_field_job" type="text" placeholder="О себе" name="profile-edit-input-job" required minlength="2" maxlength="200">
+          <span class="profile-edit-input-job-error popup__input-error"></span>
+        </label>
         <button class="popup__button popup__button_action_submit" type="submit">Сохранить</button>
       </form>
     </div>
 
     <!-- Попап с добавлением нового места -->
     <div class="popup popup_feat_card-add">
-      <form class="popup__container popup__container_feat_card-add" name="form-popup-add-card">
+      <form class="popup__container popup__container_form popup__container_feat_card-add" name="form-add-card" novalidate>
         <button class="popup__button popup__button_action_close popup__button_position_card-add-close" type="button"></button>
         <h2 class="popup__heading popup__heading_feat_card-add">Новое место</h2>
-        <input class="popup__input popup__input_field_place" type="text" placeholder="Название" name="input-name-popup-add-card" required>
-        <input class="popup__input popup__input_field_link" type="url" placeholder="Ссылка на картинку" name="input-link-popup-add-card" required>
+        <label class="popup__field">
+          <input id="card-add-input-name" class="popup__input popup__input_field_place" type="text" placeholder="Название" name="card-add-input-name" required minlength="2" maxlength="30">
+          <span class="card-add-input-name-error popup__input-error"></span>
+        </label>
+        <label class="popup__field">
+          <input id="card-add-input-link" class="popup__input popup__input_field_link" type="url" placeholder="Ссылка на картинку" name="card-add-input-link" required>
+          <span class="card-add-input-link-error popup__input-error"></span>
+        </label>
         <button class="popup__button popup__button_action_submit" type="submit">Создать</button>
       </form>
     </div>
@@ -83,6 +95,7 @@
 
     <script src="./scripts/initial-cards.js"></script>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/validate.js"></script>
 
   </body>
 </html>
