--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
       </li>
     </template>
 
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/initial-cards.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/initial-cards.js"></script>
+    <script type="module" src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/Card.js"></script>
 
   </body>
 </html>
