--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body class="root">
     <div class="page">
