--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="<%=require('./images/favicon.ico')%>" type="image/x-icon" />
   </head>
   <body class="root">
     <div class="page">
 
       <header class="header page__header">
         <a class="header__link" href="./index.html" target="_self">
-          <img class="header__logo" src="./images/header/__logo/header__logo.svg" alt="Логотип Mesto Russia">
+          <img class="header__logo" src="<%=require('./images/header/__logo/header__logo.svg')%>" alt="Логотип Mesto Russia">
         </a>
       </header>
 
       <main class="content">
         <section class="profile page__profile">
-          <img class="profile__avatar" src="./images/profile/__avatar/profile__avatar.jpg" alt="Аватар">
+          <img class="profile__avatar" src="<%=require('./images/profile/__avatar/profile__avatar.jpg')%>" alt="Аватар">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__button profile__button_action_edit" type="button"></button>
           <p class="profile__job">Исследователь океана</p>
@@ -93,8 +92,6 @@
         <button class="element__delete" type="button"></button>
       </li>
     </template>
-
-    <script type="module" src="./pages/index.js"></script>
 
   </body>
 </html>
