убрать дублирование создания карточек

--- a/src/index.html
+++ b/src/index.html
@@ -59,11 +59,11 @@
         <button class="popup__button popup__button_action_close popup__button_position_card-add-close" type="button"></button>
         <h2 class="popup__heading popup__heading_feat_card-add">Новое место</h2>
         <label class="popup__field">
-          <input id="card-add-input-name" class="popup__input popup__input_field_place" type="text" placeholder="Название" name="card-add-input-name" required minlength="2" maxlength="30">
+          <input id="card-add-input-name" class="popup__input popup__input_field_place" type="text" placeholder="Название" name="placeName" required minlength="2" maxlength="30">
           <span class="card-add-input-name-error popup__input-error"></span>
         </label>
         <label class="popup__field">
-          <input id="card-add-input-link" class="popup__input popup__input_field_link" type="url" placeholder="Ссылка на картинку" name="card-add-input-link" required>
+          <input id="card-add-input-link" class="popup__input popup__input_field_link" type="url" placeholder="Ссылка на картинку" name="placeLink" required>
           <span class="card-add-input-link-error popup__input-error"></span>
         </label>
         <button class="popup__button popup__button_action_submit" type="submit">Создать</button>
