загрузить данные профиля с сервера

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
 
       <main class="content">
         <section class="profile page__profile">
-          <img class="profile__avatar" src="<%=require('./images/profile/__avatar/profile__avatar.jpg')%>" alt="Аватар">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <img class="profile__avatar" src="" alt="Аватар">
+          <h1 class="profile__name"></h1>
           <button class="profile__button profile__button_action_edit" type="button"></button>
-          <p class="profile__job">Исследователь океана</p>
+          <p class="profile__job"></p>
           <button class="profile__button profile__button_action_add" type="button"></button>
         </section>
 
