сверсать элемент с количеством лайков

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,10 @@
           <img class="element__image" src="#" alt="Alt">
           <figcaption class="element__caption">
             <h2 class="element__heading"></h2>
-            <button class="element__like" type="button"></button>
+            <div class="element__like-container">
+              <button class="element__like" type="button"></button>
+              <div class="element__like-number"></div>
+            </div>
           </figcaption>
         </figure>
         <button class="element__delete" type="button"></button>
