--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,15 @@
       </form>
     </div>
 
+    <!-- Попап с подтверждением удаления карточки -->
+    <div class="popup popup_feat_card-delete">
+      <form class="popup__container popup__container_form popup__container_feat_card-delete" name="form-delete-card" novalidate>
+        <button class="popup__button popup__button_action_close popup__button_position_card-delete-close" type="button"></button>
+        <h2 class="popup__heading popup__heading_feat_card-delete">Вы уверены?</h2>
+        <button class="popup__button popup__button_action_submit" type="button">Да</button>
+      </form>
+    </div>
+
     <!-- Попап с полноразмерной картинкой -->
     <div class="popup popup_feat_image-fullsize">
       <div class="popup__container popup__container_feat_image-fullsize">
