--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <!-- Попап со сменой аватара -->
-    <div class="popup popup_feat_avatar-update popup_opened">
+    <div class="popup popup_feat_avatar-update">
       <form class="popup__container popup__container_form popup__container_feat_avatar-update" name="form-avatar-update" novalidate>
         <button class="popup__button popup__button_action_close popup__button_position_avatar-update-close" type="button"></button>
         <h2 class="popup__heading popup__heading_feat_avatar-update">Обновить аватар</h2>
