реализовать замену аватара на сервере

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
         <button class="popup__button popup__button_action_close popup__button_position_avatar-update-close" type="button"></button>
         <h2 class="popup__heading popup__heading_feat_avatar-update">Обновить аватар</h2>
         <label class="popup__field">
-          <input id="avatar-update-input-link" class="popup__input popup__input_field_link" type="url" placeholder="Ссылка на картинку" name="profileJob" required>
+          <input id="avatar-update-input-link" class="popup__input popup__input_field_link" type="url" placeholder="Ссылка на картинку" name="avatar" required>
           <span class="avatar-update-input-link-error popup__input-error"></span>
         </label>
         <button class="popup__button popup__button_action_submit" type="submit">Сохранить</button>
