исправить классы кнопка аватара по БЭМ

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <section class="profile page__profile">
           <div class="profile__avatar">
             <img class="profile__avatar-img" src="#" alt="Аватар">
-            <button class="profile__button_action_edit-avatar"></button>
+            <button class="profile__button profile__button_action_edit-avatar"></button>
           </div>
           <h1 class="profile__name"></h1>
           <button class="profile__button profile__button_action_edit" type="button"></button>
