--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
     <link rel="icon" href="<%=require('./images/favicon.ico')%>" type="image/x-icon" />
   </head>
   <body class="root">
     <div class="page">
-
       <header class="header page__header">
         <a class="header__link" href="./index.html" target="_self">
-          <img class="header__logo" src="<%=require('./images/header/__logo/header__logo.svg')%>" alt="Логотип Mesto Russia">
+          <img
+            class="header__logo"
+            src="<%=require('./images/header/__logo/header__logo.svg')%>"
+            alt="Логотип Mesto Russia"
+          />
         </a>
       </header>
 
       <main class="content">
         <section class="profile page__profile">
           <div class="profile__avatar">
-            <img class="profile__avatar-img" src="#" alt="Аватар">
+            <img class="profile__avatar-img" src="#" alt="Аватар" />
             <button class="profile__button profile__button_action_edit-avatar"></button>
           </div>
           <h1 class="profile__name"></h1>
@@ -28,28 +31,51 @@
         </section>
 
         <section class="elements page__elements">
-          <ul class="elements__grid">
-          </ul>
+          <ul class="elements__grid"></ul>
         </section>
       </main>
 
       <footer class="footer page__footer">
         <p class="footer__copyright">© 2020 Морев Денис</p>
       </footer>
-
     </div>
 
     <!-- Попап с редактированием профиля -->
     <div class="popup popup_feat_profile-edit">
-      <form class="popup__container popup__container_form popup__container_feat_profile-edit" name="form-profile-edit" novalidate>
-        <button class="popup__button popup__button_action_close popup__button_position_profile-edit-close" type="button"></button>
+      <form
+        class="popup__container popup__container_form popup__container_feat_profile-edit"
+        name="form-profile-edit"
+        novalidate
+      >
+        <button
+          class="popup__button popup__button_action_close popup__button_position_profile-edit-close"
+          type="button"
+        ></button>
         <h2 class="popup__heading popup__heading_feat_profile-edit">Редактировать профиль</h2>
         <label class="popup__field">
-          <input id="profile-edit-input-name" class="popup__input popup__input_field_name" type="text" placeholder="Имя" name="profileName" required minlength="2" maxlength="40">
+          <input
+            id="profile-edit-input-name"
+            class="popup__input popup__input_field_name"
+            type="text"
+            placeholder="Имя"
+            name="profileName"
+            required
+            minlength="2"
+            maxlength="40"
+          />
           <span class="profile-edit-input-name-error popup__input-error"></span>
         </label>
         <label class="popup__field">
-          <input id="profile-edit-input-job" class="popup__input popup__input_field_job" type="text" placeholder="О себе" name="profileJob" required minlength="2" maxlength="200">
+          <input
+            id="profile-edit-input-job"
+            class="popup__input popup__input_field_job"
+            type="text"
+            placeholder="О себе"
+            name="profileJob"
+            required
+            minlength="2"
+            maxlength="200"
+          />
           <span class="profile-edit-input-job-error popup__input-error"></span>
         </label>
         <button class="popup__button popup__button_action_submit" type="submit">Сохранить</button>
@@ -58,11 +84,27 @@
 
     <!-- Попап со сменой аватара -->
     <div class="popup popup_feat_avatar-update">
-      <form class="popup__container popup__container_form popup__container_feat_avatar-update" name="form-avatar-update" novalidate>
-        <button class="popup__button popup__button_action_close popup__button_position_avatar-update-close" type="button"></button>
+      <form
+        class="popup__container popup__container_form popup__container_feat_avatar-update"
+        name="form-avatar-update"
+        novalidate
+      >
+        <button
+          class="
+            popup__button popup__button_action_close popup__button_position_avatar-update-close
+          "
+          type="button"
+        ></button>
         <h2 class="popup__heading popup__heading_feat_avatar-update">Обновить аватар</h2>
         <label class="popup__field">
-          <input id="avatar-update-input-link" class="popup__input popup__input_field_link" type="url" placeholder="Ссылка на картинку" name="avatar" required>
+          <input
+            id="avatar-update-input-link"
+            class="popup__input popup__input_field_link"
+            type="url"
+            placeholder="Ссылка на картинку"
+            name="avatar"
+            required
+          />
           <span class="avatar-update-input-link-error popup__input-error"></span>
         </label>
         <button class="popup__button popup__button_action_submit" type="submit">Сохранить</button>
@@ -71,15 +113,38 @@
 
     <!-- Попап с добавлением нового места -->
     <div class="popup popup_feat_card-add">
-      <form class="popup__container popup__container_form popup__container_feat_card-add" name="form-add-card" novalidate>
-        <button class="popup__button popup__button_action_close popup__button_position_card-add-close" type="button"></button>
+      <form
+        class="popup__container popup__container_form popup__container_feat_card-add"
+        name="form-add-card"
+        novalidate
+      >
+        <button
+          class="popup__button popup__button_action_close popup__button_position_card-add-close"
+          type="button"
+        ></button>
         <h2 class="popup__heading popup__heading_feat_card-add">Новое место</h2>
         <label class="popup__field">
-          <input id="card-add-input-name" class="popup__input popup__input_field_place" type="text" placeholder="Название" name="name" required minlength="2" maxlength="30">
+          <input
+            id="card-add-input-name"
+            class="popup__input popup__input_field_place"
+            type="text"
+            placeholder="Название"
+            name="name"
+            required
+            minlength="2"
+            maxlength="30"
+          />
           <span class="card-add-input-name-error popup__input-error"></span>
         </label>
         <label class="popup__field">
-          <input id="card-add-input-link" class="popup__input popup__input_field_link" type="url" placeholder="Ссылка на картинку" name="link" required>
+          <input
+            id="card-add-input-link"
+            class="popup__input popup__input_field_link"
+            type="url"
+            placeholder="Ссылка на картинку"
+            name="link"
+            required
+          />
           <span class="card-add-input-link-error popup__input-error"></span>
         </label>
         <button class="popup__button popup__button_action_submit" type="submit">Создать</button>
@@ -88,8 +153,15 @@
 
     <!-- Попап с подтверждением удаления карточки -->
     <div class="popup popup_feat_card-delete">
-      <form class="popup__container popup__container_form popup__container_feat_card-delete" name="form-delete-card" novalidate>
-        <button class="popup__button popup__button_action_close popup__button_position_card-delete-close" type="button"></button>
+      <form
+        class="popup__container popup__container_form popup__container_feat_card-delete"
+        name="form-delete-card"
+        novalidate
+      >
+        <button
+          class="popup__button popup__button_action_close popup__button_position_card-delete-close"
+          type="button"
+        ></button>
         <h2 class="popup__heading popup__heading_feat_card-delete">Вы уверены?</h2>
         <button class="popup__button popup__button_action_submit" type="button">Да</button>
       </form>
@@ -98,8 +170,13 @@
     <!-- Попап с полноразмерной картинкой -->
     <div class="popup popup_feat_image-fullsize">
       <div class="popup__container popup__container_feat_image-fullsize">
-        <img class="popup__image-fullsize" src="#" alt="Alt">
-        <button class="popup__button popup__button_action_close popup__button_position_image-fullsize-close" type="button"></button>
+        <img class="popup__image-fullsize" src="#" alt="Alt" />
+        <button
+          class="
+            popup__button popup__button_action_close popup__button_position_image-fullsize-close
+          "
+          type="button"
+        ></button>
         <h2 class="popup__heading popup__heading_feat_image-fullsize">Название</h2>
       </div>
     </div>
@@ -108,7 +185,7 @@
     <template id="element">
       <li class="element">
         <figure class="element__figure">
-          <img class="element__image" src="#" alt="Alt">
+          <img class="element__image" src="#" alt="Alt" />
           <figcaption class="element__caption">
             <h2 class="element__heading"></h2>
             <div class="element__like-container">
@@ -120,6 +197,5 @@
         <button class="element__delete" type="button"></button>
       </li>
     </template>
-
   </body>
 </html>
